--- a/.github/workflows/pipeline-deploy.yml
+++ b/.github/workflows/pipeline-deploy.yml
@@ -23,6 +23,6 @@ jobs:
         distribuition: 'temurin'
         cache: maven
     - name: Compilação
-      run: mvn -B compila --file pom.xml
+      run: mvn -B compile --file pom.xml
       
     
